--- a/Sources/SpeziHealthKit/Resources/Localizable.xcstrings
+++ b/Sources/SpeziHealthKit/Resources/Localizable.xcstrings
@@ -1,7 +1,11 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "Active Energy" : {
+
+    },
     "Active Energy Burned" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -10,6 +14,12 @@
           }
         }
       }
+    },
+    "Alcohol Consumption" : {
+
+    },
+    "Atrial Fibrillation" : {
+
     },
     "Audiogram" : {
       "localizations" : {
@@ -20,6 +30,18 @@
           }
         }
       }
+    },
+    "Basal Body Temperature" : {
+
+    },
+    "Biotin" : {
+
+    },
+    "Blood Alcohol Content" : {
+
+    },
+    "Blood Glucose" : {
+
     },
     "Blood Oxygen" : {
       "localizations" : {
@@ -41,6 +63,66 @@
         }
       }
     },
+    "Blood Pressure (Diastolic)" : {
+
+    },
+    "Blood Pressure (Systolic)" : {
+
+    },
+    "Body Fat Percentage" : {
+
+    },
+    "Body Mass" : {
+
+    },
+    "Body Mass Index" : {
+
+    },
+    "Body Temperature" : {
+
+    },
+    "Caffeine" : {
+
+    },
+    "Calcium" : {
+
+    },
+    "Carbohydrates" : {
+
+    },
+    "Cardio Recovery" : {
+
+    },
+    "Cervical Mucus Quality" : {
+
+    },
+    "Chloride" : {
+
+    },
+    "Cholesterol" : {
+
+    },
+    "Chromium" : {
+
+    },
+    "Contraceptives" : {
+
+    },
+    "Copper" : {
+
+    },
+    "Cycling Distance" : {
+
+    },
+    "Dietary Energy Consumed" : {
+
+    },
+    "Double Support Time" : {
+
+    },
+    "Downhill Snow Sports Distance" : {
+
+    },
     "ECG" : {
       "localizations" : {
         "de" : {
@@ -50,6 +132,45 @@
           }
         }
       }
+    },
+    "Electrodermal Activity" : {
+
+    },
+    "Environmental Audio Exposure" : {
+
+    },
+    "Environmental Audio Exposure Event" : {
+
+    },
+    "Exercise Minutes" : {
+
+    },
+    "Fiber" : {
+
+    },
+    "Flights Climbed" : {
+
+    },
+    "Folate" : {
+
+    },
+    "Food" : {
+
+    },
+    "Forced Expiratory Volume, 1 sec" : {
+
+    },
+    "Forced Vital Capacity" : {
+
+    },
+    "Ground Contact Time" : {
+
+    },
+    "Headphone Audio Exposure" : {
+
+    },
+    "Headphone Audio Exposure Event" : {
+
     },
     "Heart Rate" : {
       "localizations" : {
@@ -81,6 +202,114 @@
         }
       }
     },
+    "High Heart Rate Event" : {
+
+    },
+    "Infrequent Periods" : {
+
+    },
+    "Inhaler Usage" : {
+
+    },
+    "Insulin Delivery" : {
+
+    },
+    "Iodine" : {
+
+    },
+    "Iron" : {
+
+    },
+    "Irregular Cycles" : {
+
+    },
+    "Irregular Heart Rythm Event" : {
+
+    },
+    "Lactation" : {
+
+    },
+    "Lean Body Mass" : {
+
+    },
+    "Low Cardio Fitness Event" : {
+
+    },
+    "Low Heart Rate Event" : {
+
+    },
+    "Magnesium" : {
+
+    },
+    "Manganese" : {
+
+    },
+    "Menstrual Cycles" : {
+
+    },
+    "Molybdenum" : {
+
+    },
+    "Monounsaturated Fat" : {
+
+    },
+    "Move Minutes" : {
+
+    },
+    "Niacin" : {
+
+    },
+    "Number of Times Fallen" : {
+
+    },
+    "Ovulation Test Result" : {
+
+    },
+    "Pantothenic Acid" : {
+
+    },
+    "Peak Expiratory Flow Rate" : {
+
+    },
+    "Peripheral Perfusion Index" : {
+
+    },
+    "Persistent Spotting" : {
+
+    },
+    "Phosphorus" : {
+
+    },
+    "Polyunsaturated Fat" : {
+
+    },
+    "Potassium" : {
+
+    },
+    "Pregnancy" : {
+
+    },
+    "Pregnancy Test Result" : {
+
+    },
+    "Progesterone Test Result" : {
+
+    },
+    "Prolonged Periods" : {
+
+    },
+    "Protein" : {
+
+    },
+    "Pushes" : {
+
+    },
+    "Respiratory Rate" : {
+
+    },
+    "Resting Energy" : {
+
+    },
     "Resting Heart Rate" : {
       "localizations" : {
         "de" : {
@@ -91,7 +320,32 @@
         }
       }
     },
+    "Riboflavin" : {
+
+    },
+    "Running Power" : {
+
+    },
+    "Running Speed" : {
+
+    },
+    "Running Stride Length" : {
+
+    },
+    "Saturated Fat" : {
+
+    },
+    "Selenium" : {
+
+    },
+    "Sexual Activity" : {
+
+    },
+    "Six-Minute Walk Distance" : {
+
+    },
     "Sleep Analysis" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -100,6 +354,21 @@
           }
         }
       }
+    },
+    "Sodium" : {
+
+    },
+    "Spotting" : {
+
+    },
+    "Stair Speed (Down)" : {
+
+    },
+    "Stair Speed (Up)" : {
+
+    },
+    "Stand Hours" : {
+
     },
     "Step Count" : {
       "localizations" : {
@@ -111,7 +380,89 @@
         }
       }
     },
+    "Sugar" : {
+
+    },
+    "Swimming Distance" : {
+
+    },
+    "Swimming Strokes" : {
+
+    },
+    "Thiamin" : {
+
+    },
+    "Total Fat" : {
+
+    },
+    "Underwater Depth" : {
+
+    },
+    "UV Index" : {
+
+    },
+    "Vertical Oscillation" : {
+
+    },
+    "Vitamin A" : {
+
+    },
+    "Vitamin B6" : {
+
+    },
+    "Vitamin B12" : {
+
+    },
+    "Vitamin C" : {
+
+    },
+    "Vitamin D" : {
+
+    },
+    "Vitamin E" : {
+
+    },
+    "Vitamin K" : {
+
+    },
+    "VO2 max" : {
+
+    },
+    "Waist Circumference" : {
+
+    },
+    "Walking + Running Distance" : {
+
+    },
+    "Walking Asymmetry" : {
+
+    },
+    "Walking Heart Rate Average" : {
+
+    },
+    "Walking Speed" : {
+
+    },
+    "Walking Steadiness" : {
+
+    },
+    "Walking Steadiness Event" : {
+
+    },
+    "Walking Step Length" : {
+
+    },
+    "Water" : {
+
+    },
+    "Water Temperature" : {
+
+    },
+    "Wheelchair Distance" : {
+
+    },
     "Wheelchair Push Count" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -120,6 +471,12 @@
           }
         }
       }
+    },
+    "Wrist Temperature" : {
+
+    },
+    "Zinc" : {
+
     }
   },
   "version" : "1.0"
