SampleType-based HealthKit Query API (#42)
# SampleType-based HealthKit Query API

## :recycle: Current situation & Problem
SpeziHealthKit offers a generic `SampleType` struct, which is used to
work with `HKSampleType`s in a type-safe manner.
SpeziHealthKit currently also offers a `@HealthKitQuery` property
wrapper which uses these `SampleType`s to allow easy, type-safe fetching
of HealthKit data within SwiftUI views.

This PR adds some functions that implement simple, type-safe querying of
HealthKit data outside of SwiftUI.
- `query(...) -> [Sample]`, which implements one-off querying of
HealthKit samples
- `anchorQuery(...) -> (added: [Sample], deleted: [HKDeletedObject])`,
which implements anchor queries of HealthKit data
- `continuousQuery(...) -> AsyncSequence`, which implements a
long-running HealthKit query. this function returns an `AsyncSequence`,
which will produce new elements every time HealthKit informs the query
about new/deleted samples.
- The existing code in SpeziHealthKit has been changed to use these new
APIs where possible
- Note that we currently intentionally only have one-off querying APIs;
we could also implement something that


## :gear: Release Notes
- Added several `SampleType<HKCategorySample>` extensions, for medical
symptoms
- Added some new methods on the HealthKit module, which allow for
type-safe querying of HealthKit data outside of SwiftUI views:
    - `query(_:timeRange:limit:predicate:)`
    - `anchorQuery(_:timeRange:anchor:limit:predicate:)`
    - `continuousQuery(_:startTime:anchor:limit:predicate:)`


## :books: Documentation
The new code is documented


## :white_check_mark: Testing
The new code is implicitly tested, since it is used as part of the
other, existing functionality.


## :pencil: Code of Conduct & Contributing Guidelines
By creating and submitting this pull request, you agree to follow our
[Code of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](http

--- a/Sources/SpeziHealthKit/Resources/Localizable.xcstrings
+++ b/Sources/SpeziHealthKit/Resources/Localizable.xcstrings
@@ -1,6 +1,12 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "Abdominal Cramps" : {
+
+    },
+    "Acne" : {
+
+    },
     "Active Energy" : {
 
     },
@@ -21,6 +27,9 @@
     "Allergy Record" : {
 
     },
+    "Appetite Changes" : {
+
+    },
     "Atrial Fibrillation" : {
 
     },
@@ -38,6 +47,18 @@
 
     },
     "Biotin" : {
+
+    },
+    "Bladder Incontinence" : {
+
+    },
+    "Bleeding After Pregnancy" : {
+
+    },
+    "Bleeding During Pregnancy" : {
+
+    },
+    "Bloating" : {
 
     },
     "Blood Alcohol Content" : {
@@ -84,6 +105,9 @@
     "Body Temperature" : {
 
     },
+    "Breast Pain" : {
+
+    },
     "Caffeine" : {
 
     },
@@ -97,6 +121,12 @@
 
     },
     "Cervical Mucus Quality" : {
+
+    },
+    "Chest Tightness or Pain" : {
+
+    },
+    "Chills" : {
 
     },
     "Chloride" : {
@@ -114,25 +144,58 @@
     "Condition Record" : {
 
     },
+    "Constipation" : {
+
+    },
     "Contraceptives" : {
 
     },
     "Copper" : {
 
     },
+    "Coughing" : {
+
+    },
     "Coverage Record" : {
+
+    },
+    "Cross-Country Skiing Distance" : {
+
+    },
+    "Cross-Country Skiing Speed" : {
+
+    },
+    "Cycling Cadence" : {
 
     },
     "Cycling Distance" : {
 
     },
+    "Cycling Functional Threshold Power" : {
+
+    },
+    "Cycling Power" : {
+
+    },
+    "Cycling Speed" : {
+
+    },
+    "Diarrhea" : {
+
+    },
     "Dietary Energy Consumed" : {
+
+    },
+    "Dizziness" : {
 
     },
     "Double Support Time" : {
 
     },
     "Downhill Snow Sports Distance" : {
+
+    },
+    "Dry Skin" : {
 
     },
     "ECG" : {
@@ -154,7 +217,22 @@
     "Environmental Audio Exposure Event" : {
 
     },
+    "Environmental Sound Reduction" : {
+
+    },
+    "Estimated Workout Effort Score" : {
+
+    },
     "Exercise Minutes" : {
+
+    },
+    "Fainting" : {
+
+    },
+    "Fatigue" : {
+
+    },
+    "Fever" : {
 
     },
     "Fiber" : {
@@ -175,10 +253,19 @@
     "Forced Vital Capacity" : {
 
     },
+    "Generalized Body Ache" : {
+
+    },
     "Ground Contact Time" : {
 
     },
+    "Hair Loss" : {
+
+    },
     "Handwashing Event" : {
+
+    },
+    "Headache" : {
 
     },
     "Headphone Audio Exposure" : {
@@ -207,6 +294,9 @@
         }
       }
     },
+    "Heartburn" : {
+
+    },
     "Height" : {
       "localizations" : {
         "de" : {
@@ -218,6 +308,9 @@
       }
     },
     "High Heart Rate Event" : {
+
+    },
+    "Hot Flashes" : {
 
     },
     "Immunization Record" : {
@@ -253,10 +346,19 @@
     "Lean Body Mass" : {
 
     },
+    "Loss of Smell" : {
+
+    },
+    "Loss of Taste" : {
+
+    },
     "Low Cardio Fitness Event" : {
 
     },
     "Low Heart Rate Event" : {
+
+    },
+    "Lower Back Pain" : {
 
     },
     "Magnesium" : {
@@ -266,6 +368,9 @@
 
     },
     "Medication Record" : {
+
+    },
+    "Memory Lapse" : {
 
     },
     "Menstrual Cycles" : {
@@ -280,10 +385,19 @@
     "Monounsaturated Fat" : {
 
     },
+    "Mood Changes" : {
+
+    },
     "Move Minutes" : {
 
     },
+    "Nausea" : {
+
+    },
     "Niacin" : {
+
+    },
+    "Night Sweats" : {
 
     },
     "Number of Times Fallen" : {
@@ -292,10 +406,19 @@
     "Ovulation Test Result" : {
 
     },
+    "Paddle Sports Distance" : {
+
+    },
+    "Paddle Sports Speed" : {
+
+    },
     "Pantothenic Acid" : {
 
     },
     "Peak Expiratory Flow Rate" : {
+
+    },
+    "Pelvic Pain" : {
 
     },
     "Peripheral Perfusion Index" : {
@@ -305,6 +428,9 @@
 
     },
     "Phosphorus" : {
+
+    },
+    "Physical Effort" : {
 
     },
     "Polyunsaturated Fat" : {
@@ -334,6 +460,9 @@
     "Pushes" : {
 
     },
+    "Rapid Pounding or Fluttering Heartbeat" : {
+
+    },
     "Respiratory Rate" : {
 
     },
@@ -353,6 +482,12 @@
     "Riboflavin" : {
 
     },
+    "Rowing Distance" : {
+
+    },
+    "Rowing Speed" : {
+
+    },
     "Running Power" : {
 
     },
@@ -360,6 +495,9 @@
 
     },
     "Running Stride Length" : {
+
+    },
+    "Runny Nose" : {
 
     },
     "Saturated Fat" : {
@@ -371,7 +509,19 @@
     "Sexual Activity" : {
 
     },
+    "Shortness of Breath" : {
+
+    },
+    "Sinus Congestion" : {
+
+    },
     "Six-Minute Walk Distance" : {
+
+    },
+    "Skating Sports Distance" : {
+
+    },
+    "Skipped Heartbeat" : {
 
     },
     "Sleep Analysis" : {
@@ -384,7 +534,19 @@
         }
       }
     },
+    "Sleep Apnea" : {
+
+    },
+    "Sleep Changes" : {
+
+    },
+    "Sleeping Breathing Disturbances" : {
+
+    },
     "Sodium" : {
+
+    },
+    "Sore Throat" : {
 
     },
     "Spotting" : {
@@ -421,6 +583,9 @@
     "Thiamin" : {
 
     },
+    "Time In Daylight" : {
+
+    },
     "Toothbrushing Event" : {
 
     },
@@ -431,6 +596,9 @@
 
     },
     "UV Index" : {
+
+    },
+    "Vaginal Dryness" : {
 
     },
     "Vertical Oscillation" : {
@@ -461,6 +629,9 @@
 
     },
     "VO₂ max" : {
+
+    },
+    "Vomiting" : {
 
     },
     "Waist Circumference" : {
@@ -507,7 +678,13 @@
         }
       }
     },
+    "Wheezing" : {
+
+    },
     "Workout" : {
+
+    },
+    "Workout Effort Score" : {
 
     },
     "Wrist Temperature" : {
