--- a/Sources/SpeziHealthKit/Resources/Localizable.xcstrings
+++ b/Sources/SpeziHealthKit/Resources/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "" : {
+
+    },
     "A-" : {
 
     },
@@ -13,439 +16,54 @@
     "AB+" : {
 
     },
-    "Abdominal Cramps" : {
-
-    },
-    "Acne" : {
-
-    },
-    "Active Energy" : {
-
-    },
-    "Active Energy Burned" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Aktivitätsenergie"
-          }
-        }
-      }
-    },
-    "Activity Move Mode" : {
-
-    },
-    "Alcohol Consumption" : {
-
-    },
-    "Allergy Record" : {
-
-    },
-    "Anxiety Risk (GAD-7)" : {
-
-    },
-    "Appetite Changes" : {
-
-    },
-    "Atrial Fibrillation" : {
-
-    },
-    "Audiogram" : {
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Hörtest"
-          }
-        }
-      }
-    },
     "B-" : {
 
     },
     "B+" : {
 
     },
-    "Basal Body Temperature" : {
-
-    },
-    "Biological Sex" : {
-
-    },
-    "Biotin" : {
-
-    },
-    "Bladder Incontinence" : {
-
-    },
-    "Bleeding After Pregnancy" : {
-
-    },
-    "Bleeding During Pregnancy" : {
-
-    },
-    "Bloating" : {
-
-    },
-    "Blood Alcohol Content" : {
-
-    },
-    "Blood Glucose" : {
-
-    },
-    "Blood Oxygen" : {
+    "HKCorrelationTypeIdentifierFood" : {
+      "extractionState" : "manual",
       "localizations" : {
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Blutsauerstoff"
+            "value" : "Ernährung"
           }
-        }
-      }
-    },
-    "Blood Pressure" : {
-      "localizations" : {
-        "de" : {
+        },
+        "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Blutdruck"
+            "value" : "Nutrition"
           }
-        }
-      }
-    },
-    "Blood Pressure (Diastolic)" : {
-
-    },
-    "Blood Pressure (Systolic)" : {
-
-    },
-    "Blood Type" : {
-
-    },
-    "Body Fat Percentage" : {
-
-    },
-    "Body Mass" : {
-
-    },
-    "Body Mass Index" : {
-
-    },
-    "Body Temperature" : {
-
-    },
-    "Breast Pain" : {
-
-    },
-    "Caffeine" : {
-
-    },
-    "Calcium" : {
-
-    },
-    "Carbohydrates" : {
-
-    },
-    "Cardio Recovery" : {
-
-    },
-    "Cervical Mucus Quality" : {
-
-    },
-    "Chest Tightness or Pain" : {
-
-    },
-    "Chills" : {
-
-    },
-    "Chloride" : {
-
-    },
-    "Cholesterol" : {
-
-    },
-    "Chromium" : {
-
-    },
-    "Clinical Note Record" : {
-
-    },
-    "Condition Record" : {
-
-    },
-    "Constipation" : {
-
-    },
-    "Contraceptives" : {
-
-    },
-    "Copper" : {
-
-    },
-    "Coughing" : {
-
-    },
-    "Coverage Record" : {
-
-    },
-    "Cross-Country Skiing Distance" : {
-
-    },
-    "Cross-Country Skiing Speed" : {
-
-    },
-    "Cycling Cadence" : {
-
-    },
-    "Cycling Distance" : {
-
-    },
-    "Cycling Functional Threshold Power" : {
-
-    },
-    "Cycling Power" : {
-
-    },
-    "Cycling Speed" : {
-
-    },
-    "Date of Birth" : {
-
-    },
-    "Depression Risk (PHQ-9)" : {
-
-    },
-    "Diarrhea" : {
-
-    },
-    "Dietary Energy Consumed" : {
-
-    },
-    "Dizziness" : {
-
-    },
-    "Double Support Time" : {
-
-    },
-    "Downhill Snow Sports Distance" : {
-
-    },
-    "Dry Skin" : {
-
-    },
-    "ECG" : {
-      "localizations" : {
-        "de" : {
+        },
+        "en_GB" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "EKG"
+            "value" : "Nutrition"
           }
-        }
-      }
-    },
-    "Electrodermal Activity" : {
-
-    },
-    "Environmental Audio Exposure" : {
-
-    },
-    "Environmental Audio Exposure Event" : {
-
-    },
-    "Environmental Sound Reduction" : {
-
-    },
-    "Estimated Workout Effort Score" : {
-
-    },
-    "Exercise Minutes" : {
-
-    },
-    "Fainting" : {
-
-    },
-    "Fatigue" : {
-
-    },
-    "Fever" : {
-
-    },
-    "Fiber" : {
-
-    },
-    "Fitzpatrick Skin Type" : {
-
-    },
-    "Flights Climbed" : {
-
-    },
-    "Folate" : {
-
-    },
-    "Food" : {
-
-    },
-    "Forced Expiratory Volume, 1 sec" : {
-
-    },
-    "Forced Vital Capacity" : {
-
-    },
-    "Generalized Body Ache" : {
-
-    },
-    "Ground Contact Time" : {
-
-    },
-    "Hair Loss" : {
-
-    },
-    "Handwashing Event" : {
-
-    },
-    "Headache" : {
-
-    },
-    "Headphone Audio Exposure" : {
-
-    },
-    "Headphone Audio Exposure Event" : {
-
-    },
-    "Heart Rate" : {
-      "localizations" : {
-        "de" : {
+        },
+        "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Puls"
+            "value" : "Nutrición"
           }
-        }
-      }
-    },
-    "Heart Rate Variability" : {
-      "localizations" : {
-        "de" : {
+        },
+        "es_US" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Herzfrequenzvariabilität"
+            "value" : "Nutrición"
           }
-        }
-      }
-    },
-    "Heartbeat Series" : {
-
-    },
-    "Heartburn" : {
-
-    },
-    "Height" : {
-      "localizations" : {
-        "de" : {
+        },
+        "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Größe"
+            "value" : "Nutrition"
           }
         }
       }
-    },
-    "High Heart Rate Event" : {
-
-    },
-    "Hot Flashes" : {
-
-    },
-    "Immunization Record" : {
-
-    },
-    "Infrequent Periods" : {
-
-    },
-    "Inhaler Usage" : {
-
-    },
-    "Insulin Delivery" : {
-
-    },
-    "Iodine" : {
-
-    },
-    "Iron" : {
-
-    },
-    "Irregular Cycles" : {
-
-    },
-    "Irregular Heart Rythm Event" : {
-
-    },
-    "Lab Result Record" : {
-
-    },
-    "Lactation" : {
-
-    },
-    "Lean Body Mass" : {
-
-    },
-    "Loss of Smell" : {
-
-    },
-    "Loss of Taste" : {
-
-    },
-    "Low Cardio Fitness Event" : {
-
-    },
-    "Low Heart Rate Event" : {
-
-    },
-    "Lower Back Pain" : {
-
-    },
-    "Magnesium" : {
-
-    },
-    "Manganese" : {
-
-    },
-    "Medication Record" : {
-
-    },
-    "Memory Lapse" : {
-
-    },
-    "Menstrual Cycles" : {
-
-    },
-    "Mindful Session" : {
-
-    },
-    "Molybdenum" : {
-
-    },
-    "Monounsaturated Fat" : {
-
-    },
-    "Mood Changes" : {
-
-    },
-    "Move Minutes" : {
-
-    },
-    "Nausea" : {
-
-    },
-    "Niacin" : {
-
-    },
-    "Night Sweats" : {
-
     },
     "Not Set" : {
-
-    },
-    "Number of Times Fallen" : {
 
     },
     "O-" : {
@@ -454,309 +72,7 @@
     "O+" : {
 
     },
-    "Ovulation Test Result" : {
-
-    },
-    "Paddle Sports Distance" : {
-
-    },
-    "Paddle Sports Speed" : {
-
-    },
-    "Pantothenic Acid" : {
-
-    },
-    "Peak Expiratory Flow Rate" : {
-
-    },
-    "Pelvic Pain" : {
-
-    },
-    "Peripheral Perfusion Index" : {
-
-    },
-    "Persistent Spotting" : {
-
-    },
-    "Phosphorus" : {
-
-    },
-    "Physical Effort" : {
-
-    },
-    "Polyunsaturated Fat" : {
-
-    },
-    "Potassium" : {
-
-    },
-    "Pregnancy" : {
-
-    },
-    "Pregnancy Test Result" : {
-
-    },
-    "Procedure Record" : {
-
-    },
-    "Progesterone Test Result" : {
-
-    },
-    "Prolonged Periods" : {
-
-    },
-    "Protein" : {
-
-    },
-    "Pushes" : {
-
-    },
-    "Rapid Pounding or Fluttering Heartbeat" : {
-
-    },
-    "Respiratory Rate" : {
-
-    },
-    "Resting Energy" : {
-
-    },
-    "Resting Heart Rate" : {
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Ruhepuls"
-          }
-        }
-      }
-    },
-    "Riboflavin" : {
-
-    },
-    "Rowing Distance" : {
-
-    },
-    "Rowing Speed" : {
-
-    },
-    "Running Power" : {
-
-    },
-    "Running Speed" : {
-
-    },
-    "Running Stride Length" : {
-
-    },
-    "Runny Nose" : {
-
-    },
-    "Saturated Fat" : {
-
-    },
-    "Selenium" : {
-
-    },
-    "Sexual Activity" : {
-
-    },
-    "Shortness of Breath" : {
-
-    },
-    "Sinus Congestion" : {
-
-    },
-    "Six-Minute Walk Distance" : {
-
-    },
-    "Skating Sports Distance" : {
-
-    },
-    "Skipped Heartbeat" : {
-
-    },
-    "Sleep Analysis" : {
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Schlafanalyse"
-          }
-        }
-      }
-    },
-    "Sleep Apnea" : {
-
-    },
-    "Sleep Changes" : {
-
-    },
-    "Sleeping Breathing Disturbances" : {
-
-    },
-    "Sodium" : {
-
-    },
-    "Sore Throat" : {
-
-    },
-    "Spotting" : {
-
-    },
-    "Stair Speed (Down)" : {
-
-    },
-    "Stair Speed (Up)" : {
-
-    },
-    "Stand Hours" : {
-
-    },
-    "State of Mind" : {
-
-    },
-    "Step Count" : {
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Schrittzahl"
-          }
-        }
-      }
-    },
-    "Sugar" : {
-
-    },
-    "Swimming Distance" : {
-
-    },
-    "Swimming Strokes" : {
-
-    },
-    "Thiamin" : {
-
-    },
-    "Time In Daylight" : {
-
-    },
-    "Toothbrushing Event" : {
-
-    },
-    "Total Fat" : {
-
-    },
-    "Underwater Depth" : {
-
-    },
     "Unknown" : {
-
-    },
-    "UV Index" : {
-
-    },
-    "Vaginal Dryness" : {
-
-    },
-    "Vertical Oscillation" : {
-
-    },
-    "Vision Prescription" : {
-
-    },
-    "Vital Sign Record" : {
-
-    },
-    "Vitamin A" : {
-
-    },
-    "Vitamin B6" : {
-
-    },
-    "Vitamin B12" : {
-
-    },
-    "Vitamin C" : {
-
-    },
-    "Vitamin D" : {
-
-    },
-    "Vitamin E" : {
-
-    },
-    "Vitamin K" : {
-
-    },
-    "VO₂ max" : {
-
-    },
-    "Vomiting" : {
-
-    },
-    "Waist Circumference" : {
-
-    },
-    "Walking + Running Distance" : {
-
-    },
-    "Walking Asymmetry" : {
-
-    },
-    "Walking Heart Rate Average" : {
-
-    },
-    "Walking Speed" : {
-
-    },
-    "Walking Steadiness" : {
-
-    },
-    "Walking Steadiness Event" : {
-
-    },
-    "Walking Step Length" : {
-
-    },
-    "Water" : {
-
-    },
-    "Water Temperature" : {
-
-    },
-    "Wheelchain Use" : {
-
-    },
-    "Wheelchair Distance" : {
-
-    },
-    "Wheelchair Push Count" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Rollstuhlschübe"
-          }
-        }
-      }
-    },
-    "Wheezing" : {
-
-    },
-    "Workout" : {
-
-    },
-    "Workout Effort Score" : {
-
-    },
-    "Workout Route" : {
-
-    },
-    "Wrist Temperature" : {
-
-    },
-    "Zinc" : {
 
     }
   },
